# micromouse

./: .gitignore  .travis.yml  Cargo.toml  README.md  bytes.ods  dataflow.html  paths.dxf
bluetooth_board/: bluetooth_board-B_Cu.dxf  bluetooth_board-B_Cu.gbr  bluetooth_board-B_Cu.ngc  bluetooth_board-Edge_Cuts.dxf  bluetooth_board-Edge_Cuts.gbr  bluetooth_board-Edge_Cuts.ngc  bluetooth_board-F_Cu.dxf  bluetooth_board-F_Cu.gbr  bluetooth_board-F_Cu.ngc  bluetooth_board-NPTH.drl  bluetooth_board-PTH.drl  bluetooth_board-cache.lib  bluetooth_board.kicad_pcb  bluetooth_board.kicad_pcb-bak  bluetooth_board.pro  bluetooth_board.sch  bluetooth_board.sch-bak
board/: .~lock.board2.csv#  Apr 10 12.13PM.html  _autosave-micromouse.kicad_pcb  board2-B.Cu.gbr  board2-B.Mask.gbr  board2-B.SilkS.gbr  board2-Edge.Cuts.gbr  board2-F.Cu.gbr  board2-F.Mask.gbr  board2-F.SilkS.gbr  board2-all-pos.csv  board2-cache.lib  board2.bak  board2.csv  board2.drl  board2.kicad_pcb  board2.kicad_pcb-bak  board2.pro  board2.sch  board2.xml  fp-info-cache  fp-lib-table  micromouse-B.Cu.gbr  micromouse-B.SilkS.gbr  micromouse-Eco1.User.dxf  micromouse-Edge.Cuts.dxf  micromouse-Edge.Cuts.gbr  micromouse-Edge.Cuts.gbr.1.gcode  micromouse-F.Cu.gbr  micromouse-F.SilkS.gbr  micromouse-NPTH.drl  micromouse-PTH.drl  micromouse-PTH.drl.gcode  micromouse-cache.lib  micromouse.bak  micromouse.drl  micromouse.kicad_pcb  micromouse.kicad_pcb-bak  micromouse.net  micromouse.pro  (+2 more)
board/bom/: ibom.html
board/dvr8825.pretty/: DIP-16_500_ELL.kicad_mod
board/micromouse_custom.pretty/: 1101M1S3ZQE3.kicad_mod  Littlefuse_154.kicad_mod  SC-110A-2.kicad_mod  TestPoint_Pad_1.8x1.0mm.kicad_mod
board_small/: drv8825.lib  fp-lib-table  micromouse-B.Cu.gbr  micromouse-B.Cu.gbr.gcode  micromouse-B.Cu.gbr.gcodes  micromouse-Edge.Cuts.gbr  micromouse-Edge.Cuts.gbr.2.gcode  micromouse-NPTH.drl  micromouse-NPTH.drl.gcode  micromouse-cache.lib  micromouse-rescue.lib  micromouse.kicad_pcb-bak  micromouse.sch  micromouse.step  micromouse.xml  sym-lib-table
board_small/bom/: ibom.html
firmware/: 1  CMakeLists.txt  Cargo.toml  debug.sh  memory.x  openocd.gdb  platformio.ini  steppingtimerconfigs.ods
firmware/examples/: allocator.rs
firmware/plot/: bat.gnuplot  data  log  motion.gnuplot  pid.gnuplot  plot.gnuplot  plot.sh  spin.gnuplot
firmware/src/: battery.rs  bot.rs  config.rs  control.rs  distance.c  distance.h  distance.rs  left_encoder.rs  main.c  main.rs  motion.c  motion.h  motors.rs  mouse.rs  navigate.rs  path.rs  plan.rs  stepper.c  stepper.h  time.rs  uart.c  uart.h  uart.rs  vl6180x.rs
firmware/src/distance/: left.rs
firmware/src/motors/: control.rs  left.rs  right.rs
mechanical/: Frame - Frame.stl  Frame - The Nub.stl  Wheels - Wheel.stl  hcSTP.stp  pololu-wheel-32x7mm-black.step
micromouse_lib/: Cargo.toml
micromouse_lib/src/: control.rs  lib.rs  mouse.rs  msgs.rs  remote.rs  state.rs
penplot/: output.dxf  plot.py
programmer/: fp-info-cache  programmer-B_Cu.dxf  programmer-B_Cu.gbr  programmer-B_Cu.plt  programmer-B_Cu.ps  programmer-Edge_Cuts.dxf  programmer-Edge_Cuts.gbr  programmer-Edge_Cuts.plt  programmer-Edge_Cuts.ps  programmer-F_Cu.dxf  programmer-F_Cu.gbr  programmer-F_Cu.ngc  programmer-F_Cu.plt  programmer-F_Cu.ps  programmer-cache.lib  programmer.bak  programmer.drl  programmer.kicad_pcb  programmer.kicad_pcb-bak  programmer.pro  programmer.sch
simulation/: ;  Cargo.toml  filtered  format.awk  results  run_all.sh
simulation/src/: gui.rs  main.rs  maze.rs  maze2.rs  mouse.rs  navigate.rs  plotters_cairo.rs  uart.rs
