[workspace]
members = [
    "firmware",
    "micromouse_lib",
    "simulation",
]

[patch.crates-io]
cortex-m-rt = { git = "https://github.com/timothyhollabaugh/cortex-m-rt.git", branch = "rand_update" }
cortex-m-rt-macros = { git = "https://github.com/timothyhollabaugh/cortex-m-rt.git", branch = "rand_update" }

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
