[package]
authors = ["Tim <timothyhollabaugh@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "micromouse"
version = "0.1.0"

[dependencies]
micromouse_lib = { path = "../micromouse_lib" }
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
cortex-m-rt-macros = "0.1.5"
panic-halt = "0.2.0"
pid_control = { git = "https://github.com/mbr/pid_control-rs" }
ignore-result = "0.2.0"
nb = "0.1.1"
embedded-hal = "0.2.2"

[dependencies.lazy_static]
version = "1.3.0"
default-features = false
features = ["spin_no_std"]

[dependencies.rand]
version = "0.6.5"
default-features = false

[dependencies.arrayvec]
version = "0.4.11"
default-features = false

[dependencies.cortex-m]
version = "0.5.8"
features = ["const-fn"]

[dependencies.stm32f4xx-hal]
#path = "../../stm32f4xx-hal"
git = "https://github.com/timothyhollabaugh/stm32f4xx-hal"
version = "0.3.0"
features = ["stm32f405", "rt"]

[dependencies.panic-semihosting]
git = "https://github.com/rust-embedded/panic-semihosting"

# Uncomment for the panic example.
# panic-itm = "0.4.0"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

# Uncomment for the device example.
# [dependencies.stm32f30x]
# features = ["rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "micromouse"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
