[package]
authors = ["Tim <timothyhollabaugh@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "micromouse"
version = "0.2.0"

[dependencies]
cortex-m = { version = "0.6.0", features = ["const-fn"] }
cortex-m-rt = { git = "https://github.com/timothyhollabaugh/cortex-m-rt.git", branch = "rand_update" }
cortex-m-rt-macros = { git = "https://github.com/timothyhollabaugh/cortex-m-rt.git", branch = "rand_update" }
stm32f4xx-hal = { git = "https://github.com/stm32-rs/stm32f4xx-hal", features = ["stm32f405", "rt"] }
panic-halt = "0.2.0"
ignore-result = "0.2.0"
embedded-hal = "0.2.3"
arrayvec = { version = "0.4.11", default-features = false }
micromouse_lib = { path = "../micromouse_lib" }
