[package]
name = "micromouse_lib"
version = "0.1.0"
authors = ["Tim <timothyhollabaugh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pid_control = { git = "https://github.com/mbr/pid_control-rs" }

[dependencies.num-traits]
version = "0.2.0"
default-features = false

[dependencies.num-derive]
version = "0.2.0"
default-features = false

[dependencies.arrayvec]
version = "0.4.11"
default-features = false

