[package]
name = "simulation"
version = "0.1.0"
authors = ["Tim <timothyhollabaugh@gmail.com>"]
edition = "2018"

[dependencies]
gtk = { version = "0.7.0", features = ["v3_24"] }
gio = { version = "0.7.0", features = ["v2_58"] }
cairo-rs = "0.7.0"
plotters = { version = "0.2.2", default-features = false, features = ["piston", "bitmap"] }
image = "0.21.0"
rand = "0.7.0"
serialport = "3.3.0"
micromouse_lib = { path = "../micromouse_lib" }
