[package]
name = "simulation"
version = "0.1.0"
authors = ["Tim <timothyhollabaugh@gmail.com>"]
edition = "2018"

[dependencies]
glium = "0.25"
imgui = "0.1.0-rc.1"
imgui-glium-renderer = "0.1.0-rc.1"
imgui-winit-support = "0.1.0-rc.1"
image = "0.21.0"
serialport = "3.3.0"
micromouse_lib = { path = "../micromouse_lib" }
arrayvec = "0.4.11"
